--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   background-color: #ffffff;
   border-radius: 15px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-  padding: 3px;
+  padding: 5px;
 
  
   position: absolute;
@@ -16,3 +16,4 @@
   margin: auto;
   overflow: hidden;
 }
+
